wip policy API & `apple-dm-schema`
